@@ -592,7 +592,7 @@ foreach ($collection as $resourceId => $resource) {
 }
 
 /* output */
-$toSeparatePlaceholders = $modx->getOption('toSeparatePlaceholders',$scriptProperties,false);
+$toSeparatePlaceholders = $modx->getOption('toSeparatePlaceholders', $scriptProperties,false);
 if (!empty($toSeparatePlaceholders)) {
     $modx->setPlaceholders($output,$toSeparatePlaceholders);
     return '';
@@ -603,12 +603,12 @@ $output = implode($outputSeparator, $output);
 $tplWrapper = $modx->getOption('tplWrapper', $scriptProperties, false);
 $wrapIfEmpty = $modx->getOption('wrapIfEmpty', $scriptProperties, false);
 if (!empty($tplWrapper) && ($wrapIfEmpty || !empty($output))) {
-    $output = parseTpl($tplWrapper, array('output' => $output));
+    $output = parseTpl($tplWrapper, array_merge($scriptProperties, array('output' => $output)));
 }
 
-$toPlaceholder = $modx->getOption('toPlaceholder',$scriptProperties,false);
+$toPlaceholder = $modx->getOption('toPlaceholder', $scriptProperties,false);
 if (!empty($toPlaceholder)) {
-    $modx->setPlaceholder($toPlaceholder,$output);
+    $modx->setPlaceholder($toPlaceholder, $output);
     return '';
 }
 return $output;
