@@ -1,5 +1,6 @@
 Changelog for getResources.
 
+- Pass scriptProperties to wrapperTpl
 - [#30][#80] Only dump properties for invalid tpl when debug enabled
 
 getResources 1.6.0-pl (February 19, 2013)
